added better instructions

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
     <article>
       <form action="http://localhost:3000/showForm" class="list-maker-form" method="post" >
-        <label>Choose a browser from this list:
-          <input list="browsers" name="myBrowser" />
+        <label>Input your name
+          <input list="browsers" name="myName" />
         </label>
 
           <button type="submit">jsdfhsf</button>
