--- a/index.html
+++ b/index.html
@@ -8,34 +8,30 @@
   <script src="js/app.js"></script>
 </head>
 <body>
-  <header id="header" class="">
-    <nav>
-      <ul>
-        <li><a href="/" title="">home</a></li>
-        <li><a href="" title="">link</a></li>
-        <li><a href="" title="">about</a></li>
-      </ul>
-    </nav>
-  </header><!-- /header -->
-  <main>
-    <h1>List Maker</h1>
-
-    <article>
-      <form action="http://localhost:3000/showForm" class="list-maker-form" method="post" >
-        <label>Input your name
-          <input list="browsers" name="myName" />
-        </label>
-
-          <button type="submit">jsdfhsf</button>
-      </form>
-    </article>
-    <aside class="list-output">
-
-    </aside>
-  </main>
-  <footer>
-    <h5>Footer</h5>
-  </footer>
+<div class = "form">
+  <form action="index_submit" method="post" accept-charset="utf-8">
+    <h2>Choose your Crust</h2>
+      <div id = "thin"><input type="radio" name="thin" value="thin">Thin Crust</div>
+      <div id = "thick"><input type="radio" name="thick" value="thick">Thick Crust</div>
+    <h2>Choose Toppings</h2>
+      <input type="checkbox" name="ingredients" value="Mushrooms">Mushrooms
+      <input type="checkbox" name="ingredients" value="Olives">Olives
+      <input type="checkbox" name="ingredients" value="Bacon">Bacon
+      <input type="checkbox" name="ingredients" value="Pepperoni">Pepperoni
+      <input type="checkbox" name="ingredients" value="Bell Pepper">Bell Pepper
+    <h2>Choose Quantity:</h2>
+    <input type="number" name="points" min="1" max="100">
+    <h2>Choose Amount of Cheese</h2>
+      <p>Zero</p><input type="range" name="points" min="0" max="3" step="1" value="0"><p>A lot</p>
+</form>
+</div>
+<div class="form">
+<form action="index_submit" method="post" accept-charset="utf-8">
+      <h2>Name</h2>
+        <input type="text" name="yourname" placeholder="First and Last Name">
+       <h2></h2>
+</div>
+</form>
 </body>
 </html>
 
