added some html

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       <div id = "thin"><input type="radio" name="thin" value="thin">Thin Crust</div>
       <div id = "thick"><input type="radio" name="thick" value="thick">Thick Crust</div>
     <h2>Choose Toppings</h2>
-      <input type="checkbox" name="ingredients" value="Mushrooms">Mushrooms
-      <input type="checkbox" name="ingredients" value="Olives">Olives
-      <input type="checkbox" name="ingredients" value="Bacon">Bacon
-      <input type="checkbox" name="ingredients" value="Pepperoni">Pepperoni
-      <input type="checkbox" name="ingredients" value="Bell Pepper">Bell Pepper
+      <input type="checkbox" name="ingredients" value="Mushrooms">Mushrooms<br>
+      <input type="checkbox" name="ingredients" value="Olives">Olives<br>
+      <input type="checkbox" name="ingredients" value="Bacon">Bacon<br>
+      <input type="checkbox" name="ingredients" value="Pepperoni">Pepperoni<br>
+      <input type="checkbox" name="ingredients" value="Bell Pepper">Bell Pepper<br>
     <h2>Choose Quantity:</h2>
     <input type="number" name="points" min="1" max="100">
     <h2>Choose Amount of Cheese</h2>
@@ -29,7 +29,10 @@
 <form action="index_submit" method="post" accept-charset="utf-8">
       <h2>Name</h2>
         <input type="text" name="yourname" placeholder="First and Last Name">
-       <h2></h2>
+       <h2>Phone</h2>
+       <input type="tel" name="usertel" placeholder="(+1 (...) -.......">
+       <h2>email</h2>
+       <input type="email" name="email" placeholder="Email here">
 </div>
 </form>
 </body>
