--- a/checkout.html
+++ b/checkout.html
@@ -3,6 +3,8 @@
 <head>
   <title>Checkout Page</title>
 </head>
+  <script src="js/app.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" charset="utf-8"></script>
 <body>
 
 
