--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>HTML Forms</title>
   <link rel="stylesheet" href="css/styles.css">
   <script src="js/app.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" charset="utf-8"></script>
 </head>
 <body>
   <header id="header" class="">
@@ -21,12 +22,14 @@
     <h1>List Maker</h1>
 
     <article>
+      <!-- action="http://localhost:3000/showForm"  -->
+      <!-- file:///Users/admin/code/personal/html-forms-lab/checkout.html -->
       <form action="http://localhost:3000/showForm" class="list-maker-form" method="post" >
         <label>Input your name
           <input list="browsers" name="myName" />
         </label>
 
-          <button type="submit">jsdfhsf</button>
+          <button type="submit">Submit</button>
       </form>
     </article>
     <aside class="list-output">
