--- a/index.html
+++ b/index.html
@@ -8,34 +8,18 @@
   <script src="js/app.js"></script>
 </head>
 <body>
-  <header id="header" class="">
-    <nav>
-      <ul>
-        <li><a href="/" title="">home</a></li>
-        <li><a href="" title="">link</a></li>
-        <li><a href="" title="">about</a></li>
-      </ul>
-    </nav>
-  </header><!-- /header -->
-  <main>
-    <h1>List Maker</h1>
+  <header>
+  <h1>Pizza Pizza</h1>
+    </header>>
+  <div class="main">
+    <div id="small"></div>
+    <div id="medium"></div>
+    <div id="large"></div>
+  </div>
 
-    <article>
-      <form action="http://localhost:3000/showForm" class="list-maker-form" method="post" >
-        <label>Input your name
-          <input list="browsers" name="myName" />
-        </label>
-
-          <button type="submit">jsdfhsf</button>
-      </form>
-    </article>
-    <aside class="list-output">
-
-    </aside>
-  </main>
-  <footer>
-    <h5>Footer</h5>
-  </footer>
+<footer>
+    <h2>Choose your size...</h2>
+    </footer>
 </body>
 </html>
 
