--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
   <main>
     <h1>Pies in the Sky</h1>
       <div class="sizes">
-        <div><li><a href="/" title="">small</a></li></div>
+        <div id="pie1"><li><a href="/" title="">small</a></li></div>
         <div><li><a href="" title="">medium</a></li></div>
         <div><li><a href="" title="">large</a></li></div>
       </div>
+
     <article>
       <!-- action="http://localhost:3000/showForm"  -->
       <!-- file:///Users/admin/code/personal/html-forms-lab/checkout.html -->
