--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>HTML Forms</title>
   <link rel="stylesheet" href="css/styles.css">
-  <script src="js/app.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" charset="utf-8"></script>
+  <script src="js/app.js"></script>
 </head>
 <body>
   <header id="header" class="">
@@ -22,14 +22,12 @@
     <h1>List Maker</h1>
 
     <article>
-      <!-- action="http://localhost:3000/showForm"  -->
-      <!-- file:///Users/admin/code/personal/html-forms-lab/checkout.html -->
-      <form action="http://localhost:3000/showForm" class="list-maker-form" method="get" >
+      <form action="pizzaCheckout.html" class="list-maker-form" method="get" >
         <label>Input your name
           <input list="browsers" name="myName"/>
         </label>
 
-          <button type="submit">Submit</button>
+          <button id="homepageSubmit" type="submit">Submit</button>
       </form>
     </article>
     </aside>
