--- a/pizzaCheckout.html
+++ b/pizzaCheckout.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>HTML Forms</title>
   <link rel="stylesheet" href="css/styles.css">
-  <script src="js/app.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" charset="utf-8"></script>
+  <script src="js/app.js"></script>
 </head>
 <body>
   <header id="header" class="">
@@ -19,17 +19,17 @@
     </nav>
   </header><!-- /header -->
   <main>
-    <h1>List Maker</h1>
+    <!-- <h1>List Maker</h1> -->
 
     <article>
       <!-- action="http://localhost:3000/showForm"  -->
       <!-- file:///Users/admin/code/personal/html-forms-lab/checkout.html -->
-      <form action="http://localhost:3000/showForm" class="list-maker-form" method="get" >
+      <!-- <form action="http://localhost:3000/showForm" class="list-maker-form" method="get" >
         <label>Input your name
           <input list="browsers" name="myName" />
         </label>
 
-          <button type="submit">Submit</button>
+          <button type="submit">Submit</button> -->
       </form>
     </article>
     <aside class="list-output">
@@ -57,13 +57,15 @@
 </form>
 </div>
 <div class="form">
-<form action="index_submit" method="post" accept-charset="utf-8">
+<form class="list-maker-form" action="http://localhost:3000/showForm" method="post">
       <h2>Name</h2>
-        <input type="text" name="yourname" placeholder="First and Last Name">
+        <input id="checkoutFirstName" type="text" name="yourname" placeholder="First and Last Name">
        <h2>Phone</h2>
        <input type="tel" name="usertel" placeholder="(+1 (...) -.......">
        <h2>email</h2>
        <input type="email" name="email" placeholder="Email here">
+
+     <button id="homepageSubmit" type="submit">Submit</button>
 </div>
 </form>
 </body>
