--- a/index.html
+++ b/index.html
@@ -3,71 +3,36 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link href="https://fonts.googleapis.com/css?family=BioRhyme" rel="stylesheet">
-
-  <title>HTML Forms</title>
-  <link rel="stylesheet" href="css/styles.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" charset="utf-8"></script>
-  <script src="js/app.js"></script>
+  <title></title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<!-- //add image NewYorkBkdrop from image folder -->
-  <header id="header" class="">
-    <nav>
-      <ul>
-
-      </ul>
-    </nav>
-  </header><!-- /header -->
-  <main>
-    <h1>Pies in the Sky</h1>
-      <div class="sizes">
-        <div id="pie1"><li><a href="/" title="">small</a></li></div>
-        <div><li><a href="" title="">medium</a></li></div>
-        <div><li><a href="" title="">large</a></li></div>
-      </div>
-
-    <article>
-
-      <form action="pizzaCheckout.html" class="list-maker-form" method="get" >
-        <label>Input your name
-          <input list="browsers" name="myName"/>
-        </label>
-
-          <button id="homepageSubmit" type="submit">Submit</button>
-
-      <!-- action="http://localhost:3000/showForm"  -->
-      <!-- file:///Users/admin/code/personal/html-forms-lab/checkout.html -->
-      <form action="http://localhost:3000/showForm" class="list-maker-form" method="get" >
-        <!-- <label>Input your name
-          <input list="browsers" name="myName"/>
-        </label>
-
-         <!--  <button type="submit">Submit</button> -->
-      </form>
-    </article>
-    </aside>
-  </main>
-  <footer>
-    <h5></h5>
-  </footer>
-
   <header>
-  <h1>Pizza Pizza</h1>
-    </header>>
-  <div class="main">
-    <div id="small"></div>
-    <div id="medium"></div>
-    <div id="large"></div>
+  <h1>Whatever Somenthing Pizza</h1>
+      <nav>
+        <ul>
+          <li><a href="#">Main Page</a></li>
+          <li><a href ="#">Checkout Page</a></li>
+        </ul>
+      </nav>
+  </header>
+  <main>
+    <div class="forms">
+      <form></form>
+    </div>
+<div class="three_pies">
+  <h2>Choose your Pizza Size</h2>
+  <div class="pies">
+  <div id="small_pie"><img src="pizza.png" width="250px"></div>
   </div>
-
-<footer>
-    <h2>Choose your size...</h2>
-    </footer>
+  <div class="pies">
+  <div id="medium_pie"><img src="pizza.png" width="300px"><</div>
+  </div>
+  <div class="pies">
+  <div id="large_pie"><img src="pizza.png" width="350px"><</div>
+  </div>
+</div>
+  </main>
+  <footer></footer>
 </body>
 </html>
-
-
-
-
