--- a/pizzaCheckout.html
+++ b/pizzaCheckout.html
@@ -4,41 +4,21 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>HTML Forms</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" charset="utf-8"></script>
   <script src="js/app.js"></script>
 </head>
 <body>
-  <header id="header" class="">
-    <nav>
-      <ul>
-        <li><a href="/" title="">home</a></li>
-        <li><a href="" title="">link</a></li>
-        <li><a href="" title="">about</a></li>
-      </ul>
-    </nav>
-  </header><!-- /header -->
-  <main>
-    <!-- <h1>List Maker</h1> -->
-
-    <article>
-      <!-- action="http://localhost:3000/showForm"  -->
-      <!-- file:///Users/admin/code/personal/html-forms-lab/checkout.html -->
-      <!-- <form action="http://localhost:3000/showForm" class="list-maker-form" method="get" >
-        <label>Input your name
-          <input list="browsers" name="myName" />
-        </label>
-
-          <button type="submit">Submit</button> -->
-      </form>
-    </article>
-    <aside class="list-output">
-
-    </aside>
-  </main>
-  <footer>
-    <h5>Footer</h5>
-  </footer>
+<header>
+  <h1>Pizza Pizza</h1>
+      <nav>
+        <ul>
+          <li><a href="#">Main Page</a></li>
+          <li><a href ="#">Checkout Page</a></li>
+        </ul>
+      </nav>
+</header>
+<div class="main2">
 <div class = "form">
   <form action="index_submit" method="post" accept-charset="utf-8">
     <h2>Choose your Crust</h2>
@@ -53,21 +33,27 @@
     <h2>Choose Quantity:</h2>
     <input type="number" name="points" min="1" max="100">
     <h2>Choose Amount of Cheese</h2>
-      <p>Zero</p><input type="range" name="points" min="0" max="3" step="1" value="0"><p>A lot</p>
+      <p>Little bit</p><input type="range" name="points" min="0" max="3" step="1" value="0"><p>A lot</p>
+    <h2>Choose Amount of Sauce</h2>
+      <p>Little bit</p><input type="range" name="points" min="0" max="3" step="1" value="0"><p>A lot</p>
 </form>
 </div>
 <div class="form">
 <form class="list-maker-form" action="http://localhost:3000/showForm" method="post">
       <h2>Name</h2>
-        <input id="checkoutFirstName" type="text" name="yourname" placeholder="First and Last Name">
+        <input id="checkoutFirstName" type="text" name="yourName" placeholder="First and Last Name">
        <h2>Phone</h2>
-       <input type="tel" name="usertel" placeholder="(+1 (...) -.......">
+       <input id="checkoutUserTelNumber" type="text" name="userTelNumber" placeholder="(+1 (...) -.......">
        <h2>email</h2>
        <input type="email" name="email" placeholder="Email here">
-
-     <button id="homepageSubmit" type="submit">Submit</button>
+    <button type="submit"> <h2>Checkout</h2></button>
+<!--      <button id="homepageSubmit" type="submit">Submit</button> -->
+     </form>
 </div>
-</form>
+</div>
+  <footer>
+    <h5>Footer</h5>
+  </footer>
 </body>
 </html>
 
