connected pictures to the page, added some code to secgnd html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title></title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header>
@@ -23,13 +23,13 @@
 <div class="three_pies">
   <h2>Choose your Pizza Size</h2>
   <div class="pies">
-  <div id="small_pie"><img src="pizza.png" width="250px"></div>
+  <div id="small_pie"><img src="images/pizza.png" width="250px"></div>
   </div>
   <div class="pies">
-  <div id="medium_pie"><img src="pizza.png" width="300px"><</div>
+  <div id="medium_pie"><img src="images/pizza.png" width="300px"><</div>
   </div>
   <div class="pies">
-  <div id="large_pie"><img src="pizza.png" width="350px"><</div>
+  <div id="large_pie"><img src="images/pizza.png" width="350px"><</div>
   </div>
 </div>
   </main>
