--- a/pizzaCheckout.html
+++ b/pizzaCheckout.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>HTML Forms</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" charset="utf-8"></script>
   <script src="js/app.js"></script>
 </head>
@@ -30,24 +30,30 @@
       <input type="checkbox" name="ingredients" value="Bacon">Bacon<br>
       <input type="checkbox" name="ingredients" value="Pepperoni">Pepperoni<br>
       <input type="checkbox" name="ingredients" value="Bell Pepper">Bell Pepper<br>
+  <div class="amounts">
     <h2>Choose Quantity:</h2>
     <input type="number" name="points" min="1" max="100">
     <h2>Choose Amount of Cheese</h2>
       <p>Little bit</p><input type="range" name="points" min="0" max="3" step="1" value="0"><p>A lot</p>
     <h2>Choose Amount of Sauce</h2>
       <p>Little bit</p><input type="range" name="points" min="0" max="3" step="1" value="0"><p>A lot</p>
+      </div>
 </form>
 </div>
 <div class="form">
 <form class="list-maker-form" action="http://localhost:3000/showForm" method="post">
       <h2>Name</h2>
-        <input id="checkoutFirstName" type="text" name="yourName" placeholder="First and Last Name">
+        <input id="checkoutFirstLastName" type="text" name="yourName" placeholder="First and Last Name">
+        <h2>Address:</h2>
+        <input id="streetAddress" type="text" name="userStreetAddress" placeholder="Address"><input id="" type="text" name="" placeholder="Apt."><br>
+        <input id="" type="text" name="" placeholder="City"> <input id="" type="text" name="" placeholder="State"><br>
+        <input id="" type="text" name="" placeholder="ZipCode">
        <h2>Phone</h2>
        <input id="checkoutUserTelNumber" type="text" name="userTelNumber" placeholder="(+1 (...) -.......">
        <h2>email</h2>
-       <input type="email" name="email" placeholder="Email here">
-    <button type="submit"> <h2>Checkout</h2></button>
-<!--      <button id="homepageSubmit" type="submit">Submit</button> -->
+       <input type="email" name="email" placeholder="Email here"><br>
+
+    <button type="submit"><h2>Checkout</h2></button>
      </form>
 </div>
 </div>
