--- a/pizzaCheckout.html
+++ b/pizzaCheckout.html
@@ -21,6 +21,8 @@
 <div class="main2">
 <div class = "form">
   <form action="index_submit" method="post" accept-charset="utf-8">
+    <h2>Size you chose</h2>
+      <div id = 'size'>Size: <input type='text' name='size' value=''></div>
     <h2>Choose your Crust</h2>
       <div id = "thin"><input type="radio" name="thin" value="thin">Thin Crust</div>
       <div id = "thick"><input type="radio" name="thick" value="thick">Thick Crust</div>
