--- a/pizzaCheckout.html
+++ b/pizzaCheckout.html
@@ -22,7 +22,13 @@
 <div class = "form">
   <form action="index_submit" method="post" accept-charset="utf-8">
     <h2>Size you chose</h2>
-      <div id = 'size'>Size: <input type='text' name='size' value=''></div>
+      <div id = 'size'>
+      <select name='size you chose'>
+        <option value='large'>Large</option>
+        <option value='medium'>Medium</option>
+        <option value='small'>Small</option>
+      </select>
+      </div>
     <h2>Choose your Crust</h2>
       <div id = "thin"><input type="radio" name="thin" value="thin">Thin Crust</div>
       <div id = "thick"><input type="radio" name="thick" value="thick">Thick Crust</div>
