updated submit button on checkout page

--- a/pizzaCheckout.html
+++ b/pizzaCheckout.html
@@ -60,8 +60,8 @@
        <input id="checkoutUserTelNumber" type="text" name="userTelNumber" placeholder="(+1 (...) -.......">
        <h2>email</h2>
        <input type="email" name="email" placeholder="Email here"><br>
-
-    <button type="submit"><h2>Checkout</h2></button>
+       
+    <input type="button" value="submit" onclick="submitForms()">
      </form>
 </div>
 </div>
