--- a/pizzaCheckout.html
+++ b/pizzaCheckout.html
@@ -5,21 +5,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>HTML Forms</title>
   <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=BioRhyme">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" charset="utf-8"></script>
   <script src="js/app.js"></script>
 </head>
 <body>
 <header>
-  <h1>Pizza Pizza</h1>
+  <h1>Pies In The Sky</h1>
       <nav>
         <ul>
-          <li><a href="#">Main Page</a></li>
+          <li><a href="index.html">Main Page</a></li>
         </ul>
       </nav>
 </header>
 <div class="main2">
 <div class = "form">
-  <form action="index_submit" method="post" accept-charset="utf-8">
+  <form class="list-maker-form" action="http://localhost:3000/showForm" method="post">
     <h2>Size you chose</h2>
       <div id = 'size'>
       <select name='size you chose'>
@@ -41,15 +42,14 @@
     <h2>Choose Quantity:</h2>
     <input type="number" name="points" min="1" max="100">
     <h2>Choose Amount of Cheese</h2>
-      <p>just a bit</p><input type="range" name="points" min="0" max="2" step="1" value="0"><p>very cheesy</p>
+      <p>Just a bit</p><input type="range" name="points" min="0" max="2" step="1" value="0"><p>Very cheesy</p>
     <h2>Choose Amount of Sauce</h2>
-      <p>a drizzle</p><input type="range" name="points" min="0" max="2" step="1" value="0"><p>a heap</p>
+      <p>A drizzle</p><input id="sauce" type="range" name="points" min="0" max="2" step="1" value="0"><p>A heap</p>
       </div>
-</form>
+
 </div>
 <div class="form">
-<form class="list-maker-form" action="http://localhost:3000/showForm" method="post">
-      <h2>Name</h2>
+      <h2>Name:</h2>
         <input id="checkoutFirstLastName" type="text" name="yourName" placeholder="First and Last Name">
         <h2>Address:</h2>
         <input id="streetAddress" type="text" name="userStreetAddress" placeholder="Address"><input id="" type="text" name="" placeholder="Apt."><br>
@@ -59,9 +59,11 @@
        <input id="checkoutUserTelNumber" type="text" name="userTelNumber" placeholder="(+1 (...) -.......">
        <h2>email</h2>
        <input type="email" name="email" placeholder="Email here"><br>
-
-
-    <input type="button" value="Checkout" onclick="submitForms()">
+       <h2>Pickup</h2>
+      <p><input type="radio" name="gluten">Yes</p>
+      <p><input type="radio" name="gluten">No</p><br>
+<br>
+    <input id="submit_btn" type="button" value="Checkout"/>
 
 <br>
      </form>
